<resources>
    <string name="app_name">VentAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistema de captura de ventas VentAPP</string>
    <string name="nav_header_subtitle">Autor: iscsantoscastillo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verificar_email">Sign in</string>
    <!-- Strings related to login -->
    <string name="bienvenido">Bienvenido</string>
    <string name="ventapp">®VentAPP</string>
    <string name="prompt_email">Ingrese el Email</string>
    <string name="prompt_password">Ingrese el Password</string>
    <string name="action_sign_in">Siguiente</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="invalid_credentials">Credenciales invalidas</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="networks">"Comprueba tu conexion a Internet"</string>
    <!-- Menu Lateral -->
    <string name="exit_to_app">"Cerrar sesión"</string>
    <string name="ventas">"Ventas"</string>
    <string name="retiros">"Retiros"</string>
    <string name="consignaciones">"Consignaciones"</string>
    <string name="bitacora">"Bitacora"</string>
</resources>
