<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ventas" />
        <item
            android:id="@+id/nav_retiros"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/retiros" />
        <item
            android:id="@+id/nav_consignaciones"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/consignaciones" />
        <item
            android:id="@+id/nav_bitacora"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/bitacora" />
        <item
            android:id="@+id/nav_exit_to_app"
            android:icon="@drawable/ic_baseline_exit_to_app_24px"
            android:title="@string/exit_to_app" />
    </group>

</menu>
